Fixed spacing between content and footer. Remove content if no content exists

--- a/assets/styles/screen.sass
+++ b/assets/styles/screen.sass
@@ -312,6 +312,7 @@ a
   overflow-x: hidden
   max-width: $max-width
   margin-top: 2em
+  margin-bottom: 2em
   padding: 0 $gutter/2
 
   .info &
